2005-02-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.c:
	* winkeynames.h:
	Updated fix for ABNT2 and HK_Toggle keys. 

2005-02-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.h:
	* winkeynames.h:
	Backout ABNT2 and HK_Toggle fix since it broke keys F1 and F4. 

2005-02-07  Alexander Gottwald  <ago at freedesktop dot org>

	* winlayouts.h:
	* winconfig.c:
	Moved keyboard layout table to external file.

2005-02-02  Alexander Gottwald  <ago at freedesktop dot org>

	* wincreatewnd.c:
	Force ShowWindow if XWin was started via run.exe. Fixes mainwindow
	not showing bug

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwindow.c
	* winmultiwindowwndproc.c:
	Create windows with SWP_NOACTIVATE flag (updated) (Kensuke Matsuzaki)

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	Fixes for window ordering problem (updated) (Kensuke Matsuzaki)

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winconfig.c:
	Added hungarian keyboard layout.

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winmessages.h
	* winmsg.h
	* winmsg.c
	* winmultiwindowwndproc.c
	* winwin32rootlesswndproc.c
	* winwndproc.c:
	Make logging of messages configurable with environment variables

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* InitOutput.c:
	resolve SHGetFolderPath dynamicly since it is not available on all Windows 
	systems.

2005-01-12  Alexander Gottwald  <ago at freedesktop dot org>

	* winmsg.c
	* winmsg.h:
	Introduce function winTrace which prints log message with verbosity 10
	* winmultiwindowwindow.c:
	Use winTrace for 3 heavily called functions

2005-01-11  Alexander Gottwald  <ago at freedesktop dot org>

	* XWin.man:
	Document the -silent-dup-error switch

2005-01-11  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeyhook.c:
	Do not grab ALT-TAB when window is in multiwindow mode
	